--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-eh
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sturdy Barnacle</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <main>
+        <p>Main Text</p>
+    </main>
+
+    <footer>
+        <p>By this bum named chicken-nugget-stack</p>
+    </footer>
+
+    <script src="js/main.js"></script>
+</body>
+</html>
